Checkout Method solution. 3 ban-block section. If user is logged in this will not appear. Right now I am using the id="wholesaleAcct" to show how this should change/work. The ID alters some CSS so pay special attention to that. Also, to get this to look correct, I had to add wrapping divs around the 2 flex-row divs.

--- a/css/trs-theme.css
+++ b/css/trs-theme.css
@@ -2115,8 +2115,11 @@ button.close { -webkit-appearance: none; padding: 0; cursor: pointer; background
 .section.hexDownEdge { height: 30px; position: relative; z-index: 1000; padding-bottom: 0; margin-top: -2px; background-color: transparent; background-image: url(../img/element-hexDownEdge.svg); background-position: center top; background-repeat: no-repeat; -webkit-background-size: 100% auto; -moz-background-size: 100% auto; background-size: 100% auto; }
 .section.hexDownEdge-primary { background-image: url(../img/element-hexDownEdge-primary.svg); }
 
-.section.details { margin-top: -50px; padding-top: 60px; background-image: url(../img/bg-productDetails.jpg); background-position: center bottom; background-repeat: no-repeat; -webkit-background-size: 100% auto; -moz-background-size: 100% auto; background-size: 100% auto; }
-.section.checkout .shippingaddress { margin-top: -50px; padding-top: 60px; }
+.section.checkout { margin-top: -30px; }
+.section.details { background-image: url(../img/bg-productDetails.jpg); background-position: center bottom; background-repeat: no-repeat; -webkit-background-size: 100% auto; -moz-background-size: 100% auto; background-size: 100% auto; }
+
+#wholesaleAcct .section.checkout .checkoutmethod { display: none; }
+#wholesaleAcct .section.checkout .shippingaddress { padding-top: 60px; }
 
 .section.summary p, .footer p { font-size: 14px; line-height: 1.5; }
 .section.summary .col-sm-5 ~ .col-sm-5 p { margin-bottom: 30px; }
@@ -2125,6 +2128,8 @@ button.close { -webkit-appearance: none; padding: 0; cursor: pointer; background
 @media (max-width:767px) {
   .section.summary p { text-align: center; }
   .section.module-quickstartguide h2 { margin-bottom: 5px; }
+  .section.checkout .checkoutmethod { padding-bottom: 0; }
+  .section.checkout .checkoutmethod .btn-block { margin-bottom: 10px; }
 }
 @media (min-width:768px) {
   .section.texturedEdge, .section.hexDownEdge { -webkit-background-size: 105% auto; -moz-background-size: 105% auto; background-size: 105% auto; }
@@ -2137,7 +2142,7 @@ button.close { -webkit-appearance: none; padding: 0; cursor: pointer; background
   .section.summary p, .footer p { line-height: 1.7; margin-bottom: 30px; }
   .col-sm-4.section.nav-products p { min-height: 145px; }
   .section.nav-products p { margin-bottom: 30px; }
-  .section.checkout .shippingmethod { margin-top: -30px; padding-top: 60px; }
+  #wholesaleAcct .section.checkout .shippingaddress, #wholesaleAcct .section.checkout .shippingmethod { padding-top: 60px; }
   .partners .details { min-height: 500px; }
 }
 @media (min-width:992px) {
@@ -2145,7 +2150,7 @@ button.close { -webkit-appearance: none; padding: 0; cursor: pointer; background
   .section.hexDownEdge { height: 50px; }
   .col-sm-4.section.nav-products p { min-height: 110px; }
   .section.wrap .col-sm-4.section.nav-products p { min-height: 130px; }
-  .section.checkout .shippingmethod { margin-top: -50px; }
+  .section.checkout { margin-top: -50px; }
   .partners .details { min-height: 410px; }
 }
 @media (min-width:992px) and (max-width:1199px) {
